# repository-wrapup

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.devcontainer/: devcontainer.json
src/: github.rs  lib.rs  main.rs  mockables.rs  repo_scoring.rs
src/repo_scoring/: commit_age.rs  mod.rs
tests/: commit_age_test.rs  github_test.rs  repo_scoring_test.rs
