[package]
name = "repository-wrapup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bitflags = "2.4.0"
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
futures = {version = "0.3.28", features = ["executor"]}
log = "0.4.20"
octocrab = "0.31.1"
serde = "1.0.188"
simplelog = "0.12.1"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.107"
unimock = "0.5.3"
