[package]
name = "repository-wrapup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bitflags = "2.4.1"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
futures = {version = "0.3.28", features = ["executor"]}
log = "0.4.20"
octocrab = "0.38.0"
simplelog = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
